--- a/Contact.css
+++ b/Contact.css
@@ -1,53 +1,58 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-.nav-bar{
-    font-family: 'Open Sans', sans-serif;
+  }
+  
+  body {
+    font-family: "Open Sans", sans-serif;
+    background-image: url("acoperis.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0;
+  }
+  
+  .nav-bar {
+    font-family: "Open Sans", sans-serif;
     width: 100%;
     height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    position: fixed;
+    position: absolute;
     top: 0;
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 12px 20px;
-}
-
-.nav-bar h1{
+  }
+  
+  .nav-bar h1 {
     display: inline-block;
-    width: 100%;
+    width: 25%;
     color: white;
     margin: 0;
-    padding: 0;
-    padding: 10px;
-}
-
-
-.logo img{
+  }
+  
+  .logo img {
     display: inline-block;
     height: 50px;
     width: 50px;
-}
-
-.menu{
+  }
+  
+  .menu {
     display: flex;
     justify-content: flex-end;
     width: 100%;
     gap: 20px;
-}
-
-.menu li{
+  }
+  
+  .menu li {
     padding-left: 30px;
     list-style: none;
-}
-
-.menu li a{
+  }
+  
+  .menu li a {
     font-size: 16px;
     display: inline-block;
     text-decoration: none;
@@ -56,70 +61,69 @@
     transition: 0.15s ease-in-out;
     position: relative;
     text-transform: uppercase;
-}
-
-.menu li a:hover{
+  }
+  
+  .menu li a:hover {
     width: 100%;
     color: lime;
     transition: color 0.5s ease-in-out;
     transform: scale(1.2);
-}
-
-.open-menu , .close-menu{
+  }
+  
+  .open-menu,
+  .close-menu {
     position: absolute;
     color: var(--color1);
     cursor: pointer;
     font-size: 1.5rem;
     display: none;
-}
-
-.open-menu {
+  }
+  
+  .open-menu {
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
-}
-
-.close-menu{
+  }
+  
+  .close-menu {
     top: 20px;
     right: 25px;
-}
-
-#check{
-    display: none;
-}
-body {
-    font-family: Arial, sans-serif;
-    background-image: url('acoperis.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0;
-    padding: 0;
   }
+  
+  #check {
+    display: none;
+  }
+  
   .container {
     max-width: 400px;
     margin: 0 auto;
     margin-top: 150px;
-    background-image: url('panousolar.png');
+    background-image: url("panousolar.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   }
+  
   h1 {
     text-align: center;
     color: white;
   }
+  
   form {
     text-align: left;
   }
+  
   label {
     display: block;
     margin-top: 10px;
-    color: white
+    color: white;
   }
-  input, textarea {
-    width: 90%;
+  
+  input,
+  textarea {
+    width: 100%;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 15px;
@@ -127,6 +131,7 @@ body {
     border-radius: 5px;
     font-size: 14px;
   }
+  
   input[type="submit"] {
     background-color: white;
     color: black;
@@ -136,55 +141,62 @@ body {
     margin-left: 10px;
     cursor: pointer;
     font-size: 16px;
+    display: block;
+    margin: 0 auto;
   }
+  
   input[type="submit"]:hover {
     background-color: cornsilk;
   }
-
+  
   footer {
     background-color: rgba(0, 0, 0, 0.5);
-    color: #fff; 
+    color: #fff;
     text-align: center;
     padding: 20px;
     position: relative;
     position: fixed;
     bottom: 0;
     width: 100%;
-}
-
+  }
+  
   @media (max-width: 600px) {
-    
-    .main{
-        padding-top: 55px;
+    .main {
+      padding-top: 55px;
     }
-
+  
     .menu {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 40%;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        right: -100%;
-        z-index: 100;
-        background-color: rgba(0, 0, 0, 0.5);
-        transition: all 0.2s ease-in-out;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      right: -100%;
+      z-index: 100;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 0.2s ease-in-out;
     }
-
+    .nav-bar h1{
+        width: 78%;
+        text-align: left;
+    }
     .menu li {
-        margin-top: 40px;
+      margin-top: 10px;
     }
-
+  
     .menu li a {
-        padding: 10px;
+      padding: 10px;
     }
-
-    .open-menu, .close-menu {
-        display: block;
+  
+    .open-menu,
+    .close-menu {
+      display: block;
     }
-
+  
     #check:checked ~ .menu {
-        right: 0;
+      right: 0;
     }
-}
+  }
+  
